14397
Hi all. I use IDEA for my Scala-development and it generates import-statements for me. Say I have the following classes:

no.officenet.origo.core.infrastructure.menu.MenuItem
no.officenet.origo.core.domain.model.AbstractDomainObject

Now, MenuItem extends AbstractDomainObject and has the following import (generated by IDEA's scala-plugin):

import domain.model.AbstractDomainObject

But compiling with trunk(r18409) now fails with the following compile-error:
```scala
/home/andreak/dev/officenet_origo/trunk/origo-core/src/main/scala/no/officenet/origo/core/infrastructure/menu/MenuItem.scala:8: error: not found: value domain            
import domain.model.AbstractDomainObject                                                                                                                                  
       ^                                                                                                                                                                  
```
If I change the import to the fully-qualified class-name, it works:
import no.officenet.origo.core.domain.model.AbstractDomainObject

Are fully qualified names the "new way" to import stuff in 2.8.0?
